# stellar_Earn

./: .gitignore  PR_1934_wallet_reconnect_verification.md  TODO.md  package-lock.json  package.json
.github/workflows/: accessibility.yml  backend-ci.yml  ci.yml  contract-ci.yml  dependency-audit.yml  frontend-check-summary.yml  frontend-ci.yml  frontend-lint.yml  frontend-typecheck.yml  frontend-vitest-cache.yml  openapi-breaking-change.yml  prettier.yml  secret-scanning.yml
BackEnd/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.scripts.json
BackEnd/docs/: CREDENTIAL_ROTATION.md
BackEnd/scripts/: generate-openapi.ts
BackEnd/src/: app.module.ts  main.ts
BackEnd/src/common/: common.module.ts
BackEnd/src/config/: ormconfig.ts  security.config.ts  sentry.config.ts  swagger.config.ts
BackEnd/src/database/: data-source.ts
BackEnd/src/events/: events.module.ts
BackEnd/test/: payouts.e2e-spec.ts
BackEnd/test/auth/: auth.e2e-spec.ts
BackEnd/test/health/: health.e2e-spec.ts
BackEnd/test/integration/: analytics-cache.integration-spec.ts  (+8 more)
Contract/earn-quest/: Cargo.toml
Contract_archived/earn-quest/: EVENT_QUICK_REFERENCE.md  EVENT_REFERENCE.md
FrontEnd/my-app/: CHANGELOG.md  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
contracts/earn-quest/: CHANGELOG.md  Cargo.toml  SNAPSHOT_MANAGEMENT.md  deny.toml
contracts/earn-quest/fuzz/: Cargo.toml
contracts/earn-quest/fuzz/fuzz_targets/: batch_approval_fuzzer.rs  batch_registration_fuzzer.rs
docs/: dependency-audit.md
(+1159 files in other folders)
