[package]
name = "earn-quest-fuzz"
version = "0.0.0"
authors = ["Automated Delivery"]
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-sdk = { version = "20.0.0", features = ["testutils"] }
earn-quest = { path = ".." }

[[bin]]
name = "batch_registration_fuzzer"
path = "fuzz_targets/batch_registration_fuzzer.rs"
test = false
doc = false

[[bin]]
name = "batch_approval_fuzzer"
path = "fuzz_targets/batch_approval_fuzzer.rs"
test = false
doc = false
